2009-01-25  Dominique Dumont  <domi.dumont@free.fr> v0.103

	* t/augeas_backend.t: Added workaround Augeas locale bug so that
	tests can be run on amd64 arch. The workaround re-run tests with
	LANG=C environment

2009-01-19  Dominique Dumont  <dominique.dumont@hp.com> v0.102

	* lib/Config/Model/Backend/Augeas.pm: Lots of improvement to deal
	with sshd_config lenses

2008-11-16  Domi  <domi@bilbo.maison> 

	* lib/Config/Model/Backend/Augeas.pm (write): Fixed a bug that
	prevented to write through Augeas even if read through Augeas was
	not done.

2008-11-13  Dominique Dumont  <dominique.dumont@hp.com> v0.101

	* lib/Config/Model/Backend/Augeas.pm: First version
	
